--- a/public_static/main.html
+++ b/public_static/main.html
@@ -25,7 +25,7 @@
             <ul class="nav navbar-nav navbar-right">
                 <li id="homeNav"><a href="http://localhost:5000/">Home</a></li>
                 <li id="favoritesNav"><a href="#">Favorites</a></li>
-                <li id="queueNav"><a href="#">playlists</a></li>
+                <li id="queueNav"><a href="#">Playlists</a></li>
                 <li id="libraryNav"><a href="#">Library</a></li>
                 <li id="uploadNav"><a href="#">Upload</a></li>
             </ul>
@@ -42,7 +42,29 @@
     <div class="container-fluid" style="padding: 70px 0 100px 0; margin: 0px;">
         <div class="col-lg-2 thumbs" style="background-color: #eee; overflow-y: scroll; padding: 9px 0; overflow-x: visible!important; box-shadow: inset 0 0 23px rgba(0,0,0,0.5)">
             <div id="clearQueue">
-                <button type="button" name="button" id="clearButton">Clear Queue</button>
+                <button type="button" id="clearButton" class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal">Clear Queue</button>
+                <div class="modal fade" id="myModal" role="dialog">
+                    <div class="modal-dialog">
+
+                      <!-- Modal content-->
+                      <div class="modal-content">
+                        <div class="modal-header alert alert-warning">
+                          <button type="button" class="close" data-dismiss="modal">&times;</button>
+                          <h4 class="modal-title">Alert!</h4>
+                        </div>
+                        <div class="modal-body">
+                          <p>Are you sure you want to clear your queue?</p>
+                        </div>
+                        <div class="modal-footer">
+                          <button type="button" class="btn btn-default" data-dismiss="modal" id="finalClear">CLEAR</button>
+                          <button type="button" class="btn btn-default" data-dismiss="modal">CANCEL</button>
+                        </div>
+                      </div>
+
+                    </div>
+                    </div>
+                <hr class="style17">
+
             </div>
             <div id='queueView' class="list-group">
                 <h2 style="text-align: center; margin-top: 100%; color: gray;">The Queue is Empty</h2>
@@ -57,7 +79,7 @@
     </div>
 
     <!-- FOOTER BEGINS THROUGH NAVBAR -->
-    <nav class="navbar navbar-default navbar-fixed-bottom" style="height: 100px;  background: linear-gradient(to bottom left, #13547a  0%, #80d0c7 100%);">
+    <nav class="navbar navbar-default navbar-fixed-bottom" style="height: 100px;  background: linear-gradient(to bottom left, #13547a 0%, #80d0c7 100%);">
         <img id="img-wrapper" src="">
         <div class="title">
             <div class="song-name">
@@ -65,8 +87,8 @@
             <div class="album-name">
             </div>
         </div>
-        <div id='mainbar' style="display:inline-block;position:relative;width:800px;margin-left:100px;height:40px;background-color:transparent;cursor:pointer">
-            <div id='defBar' class="default-bar" style="cursor:pointer">
+        <div id='mainbar' style="display:inline-block;position:relative;width:10vw;margin-left:50px;height:40px;background-color:transparent;cursor:pointer; margin-right: 0;">
+            <div id='defBar' class="default-bar" style="cursor:pointer; background-color: darkgray;">
                 <!-- <div id='time' style='display:none'>
                 </div> -->
                 <div id='progBar' class="progress-bar">
@@ -77,18 +99,18 @@
                 </div>
             </div>
         </div>
-        <span id='buttons' class="btn-group" role='group' aria-label="">
+        <span id='buttons' class="btn-group" role='group' aria-label="" style="position: absolute; right: 300px;">
             <button id="prev" class="glyphicon glyphicon-step-backward" onclick='playPrev()'></button>
             <button id="play" class="glyphicon glyphicon-play" onclick="playOrPause()"></button>
             <button id="pause" class="glyphicon glyphicon-pause" onclick="playOrPause()" style="display:none;"></button>
             <button id="next" class="glyphicon glyphicon-step-forward" onclick="playNext()"></button>
         </span>
 
-        <span id="shuloop">
-            <button id="rep" class="fa fa-repeat"></button>
-            <button id="ran" class="fa fa-random"></button>
-            <button id='mute' class="fa fa-volume-up" onclick="muteOrUnmute()" ></button>
-            <button id='unmute' class="fa fa-volume-off" style="display:none" onclick="muteOrUnmute()"></button>
+        <span id="shuloop" style="position: absolute; right: 0px;">
+            <button id="rep" class="fa fa-repeat" data-toggle="tooltip" title="Repeat"></button>
+            <button id="ran" class="fa fa-random" data-toggle="tooltip" title="Shuffle"></button>
+            <button id='mute' class="fa fa-volume-up" onclick="muteOrUnmute()" data-toggle="tooltip" title="Mute"></button>
+            <button id='unmute' class="fa fa-volume-off" style="display:none" onclick="muteOrUnmute()" data-toggle="tooltip" title="Unmute"></button>
             <div class="volume_container" style="width:30px;height:200px;background-color:whitesmoke;">
                 <div id='defVol' class="progress">
                       <div id='volProg' class="progress-bar prog2" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100" style="min-width: 10px; position: relative; top: -1px;">
@@ -101,6 +123,7 @@
         </span>
 
     </nav>
+    <!-- #13547a #80d0c7 -->
     <!-- FOOTER ENDS -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src='player.js'></script>
