--- a/public_static/playlistDisp.html
+++ b/public_static/playlistDisp.html
@@ -37,7 +37,7 @@
     <!-- NAVBAR ENDS -->
     <div class="container-fluid" style="padding: 70px 0 100px 0; margin: 0px;">
         <div class="col-lg-2 thumbs" style="background-color: #eee; overflow-y: scroll; padding: 13px 0;">
-            <div class="list-group">
+            <div class="list-group" >
                 <a href="#" class="list-group-item active"><img src="Divide_cover.png" style="width: 40px; display: inline; margin-right: 10px;">First item<i class="fa fa-volume-up" aria-hidden="true" style="font-size: 26px; float: right; position: relative; top: 8px;"></i></a>
                 <a href="#" class="list-group-item"><img src="Divide_cover.png" style="width: 40px; display: inline; margin-right: 10px;">Second item</a>
                 <a href="#" class="list-group-item"><img src="Divide_cover.png" style="width: 40px; display: inline; margin-right: 10px;">Third item</a>
@@ -59,11 +59,14 @@
                     <h1 style="text-align: center;">Your Playlist ♬</h1>
                 </div>
                 <div class="row" style="margin-left: 40px;display: flex; flex-wrap: wrap;">
-                    <div class="col-lg-3 albumHolder">
+                    <div class="col-lg-3 col-md-3 col-sm-3 albumHolder">
                         <div class="main">
                             <img src="Divide_cover.png" height="100%" width="100%;">
                             <div class="blackFrame">
 
+                            </div>
+                            <div class="playButton">
+                                <i data-toggle="tooltip" title="Play Playlist" class="fa fa-play-circle-o " aria-hidden="true"></i>
                             </div>
                             <div class="songName">
                                 PLAYLISTNAME
@@ -71,19 +74,55 @@
                         </div>
                         <h3>Song Name</h3>
                     </div>
-                    <div class="list-group" style="padding: 70px 50px 150px 100px;width: 70%;">
-                        <a href="#" class="list-group-item active"><img src="Divide_cover.png" style="width: 40px; display: inline; margin-right: 10px;">First item<i class="fa fa-volume-up" aria-hidden="true" style="font-size: 26px; float: right; position: relative; top: 8px;"></i></a>
-                        <a href="#" class="list-group-item"><img src="Divide_cover.png" style="width: 40px; display: inline; margin-right: 10px;">Second item</a>
-                        <a href="#" class="list-group-item"><img src="Divide_cover.png" style="width: 40px; display: inline; margin-right: 10px;">Third item</a>
-                        <a href="#" class="list-group-item"><img src="Divide_cover.png" style="width: 40px; display: inline; margin-right: 10px;">First item</a>
-                        <a href="#" class="list-group-item"><img src="Divide_cover.png" style="width: 40px; display: inline; margin-right: 10px;">Second item</a>
-                        <a href="#" class="list-group-item"><img src="Divide_cover.png" style="width: 40px; display: inline; margin-right: 10px;">Third item</a>
-                        <a href="#" class="list-group-item"><img src="Divide_cover.png" style="width: 40px; display: inline; margin-right: 10px;">First item</a>
-                        <a href="#" class="list-group-item"><img src="Divide_cover.png" style="width: 40px; display: inline; margin-right: 10px;">Second item</a>
-                        <a href="#" class="list-group-item"><img src="Divide_cover.png" style="width: 40px; display: inline; margin-right: 10px;">Third item</a>
-                        <a href="#" class="list-group-item"><img src="Divide_cover.png" style="width: 40px; display: inline; margin-right: 10px;">First item</a>
-                        <a href="#" class="list-group-item"><img src="Divide_cover.png" style="width: 40px; display: inline; margin-right: 10px;">Second item</a>
-                        <a href="#" class="list-group-item"><img src="Divide_cover.png" style="width: 40px; display: inline; margin-right: 10px;">Third item</a>
+
+                    <div class="col-lg-7 col-md-7 col-sm-7">
+                        <div class="list-group" id="playlist" style="padding: 70px 50px 150px 30px;width: 100%;">
+                            <li href="#" class="list-group-item"><span style="color: lightgray; margin-right: 20px; margin-left: 15px;">1</span><div style="display: inline-block;"><img src="Divide_cover.png" style="width: 40px; display: inline; margin-right: 10px;"></div><div style="display: inline-block;position: relative; top: 12px;"><span class="songTitle">First Item</span><br><span class="art">artist</span></div>
+                                <div class="dropdown" style="float: right; top: 10px;">
+                                    <button class="btn btn-default dropdown-toggle playlist-drop" type="button" data-toggle="dropdown" style="outline: none;"><img src="add.png" width="26px">
+                                    </button>
+                                    <ul class="dropdown-menu" style="position: absolute; left: -200px;" >
+                                      <li><a href="#"><i class="fa fa-heart" aria-hidden="true" style="color: lightgray;"></i> Add to Favourites</a></li>
+                                      <li><a href="#"><i class="fa fa-heart" aria-hidden="true" style="color: #E91E63;"></i> Added to Favourites &nbsp;&nbsp;&nbsp;<span style="color: gray">Remove</span></a></li>
+                                      <li><a href="#"><i class="fa fa-times" aria-hidden="true" style="color: lightgray; font-size: 18px;"></i> Remove from Playlist</a></li>
+                                    </ul>
+                                </div>
+                            </li>
+                            <li href="#" class="list-group-item"><span style="color: lightgray; margin-right: 20px; margin-left: 15px;">1</span><div style="display: inline-block;"><img src="Divide_cover.png" style="width: 40px; display: inline; margin-right: 10px;"></div><div style="display: inline-block;position: relative; top: 12px;"><span class="songTitle">First Item</span><br><span class="art">artist</span></div>
+                                <div class="dropdown" style="float: right; top: 10px;">
+                                    <button class="btn btn-default dropdown-toggle playlist-drop" type="button" data-toggle="dropdown" style="outline: none;"><img src="add.png" width="26px">
+                                    </button>
+                                    <ul class="dropdown-menu" style="position: absolute; left: -200px;" >
+                                      <li><a href="#"><i class="fa fa-heart" aria-hidden="true" style="color: lightgray;"></i> Add to Favourites</a></li>
+                                      <li><a href="#"><i class="fa fa-heart" aria-hidden="true" style="color: #E91E63;"></i> Added to Favourites &nbsp;&nbsp;&nbsp;<span style="color: gray">Remove</span></a></li>
+                                      <li><a href="#"><i class="fa fa-times" aria-hidden="true" style="color: lightgray; font-size: 18px;"></i> Remove from Playlist</a></li>
+                                    </ul>
+                                </div>
+                            </li>
+                            <li href="#" class="list-group-item"><span style="color: lightgray; margin-right: 20px; margin-left: 15px;">1</span><div style="display: inline-block;"><img src="Divide_cover.png" style="width: 40px; display: inline; margin-right: 10px;"></div><div style="display: inline-block;position: relative; top: 12px;"><span class="songTitle">First Item</span><br><span class="art">artist</span></div>
+                                <div class="dropdown" style="float: right; top: 10px;">
+                                    <button class="btn btn-default dropdown-toggle playlist-drop" type="button" data-toggle="dropdown" style="outline: none;"><img src="add.png" width="26px">
+                                    </button>
+                                    <ul class="dropdown-menu" style="position: absolute; left: -200px;" >
+                                      <li><a href="#"><i class="fa fa-heart" aria-hidden="true" style="color: lightgray;"></i> Add to Favourites</a></li>
+                                      <li><a href="#"><i class="fa fa-heart" aria-hidden="true" style="color: #E91E63;"></i> Added to Favourites &nbsp;&nbsp;&nbsp;<span style="color: gray">Remove</span></a></li>
+                                      <li><a href="#"><i class="fa fa-times" aria-hidden="true" style="color: lightgray; font-size: 18px;"></i> Remove from Playlist</a></li>
+                                    </ul>
+                                </div>
+                            </li>
+                            <li href="#" class="list-group-item"><span style="color: lightgray; margin-right: 20px; margin-left: 15px;">1</span><div style="display: inline-block;"><img src="Divide_cover.png" style="width: 40px; display: inline; margin-right: 10px;"></div><div style="display: inline-block;position: relative; top: 12px;"><span class="songTitle">First Item</span><br><span class="art">artist</span></div>
+                                <div class="dropdown" style="float: right; top: 10px;">
+                                    <button class="btn btn-default dropdown-toggle playlist-drop" type="button" data-toggle="dropdown" style="outline: none;"><img src="add.png" width="26px">
+                                    </button>
+                                    <ul class="dropdown-menu" style="position: absolute; left: -200px;" >
+                                      <li><a href="#"><i class="fa fa-heart" aria-hidden="true" style="color: lightgray;"></i> Add to Favourites</a></li>
+                                      <li><a href="#"><i class="fa fa-heart" aria-hidden="true" style="color: #E91E63;"></i> Added to Favourites &nbsp;&nbsp;&nbsp;<span style="color: gray">Remove</span></a></li>
+                                      <li><a href="#"><i class="fa fa-times" aria-hidden="true" style="color: lightgray; font-size: 18px;"></i> Remove from Playlist</a></li>
+                                    </ul>
+                                </div>
+                            </li>
+
+                        </div>
                     </div>
                 </div>
             </div>
